
  - eventFileFlowRate for volumetric event file (groundwaterFoam/impesFoam...)
  - eventFileMassFlowRate for mass event file (porousScalarTransport(2D)Foam)

- porousScalarTransportFoam

  - water content (theta) can be given instead of saturation (Sphase) to allow
  the direct use of pre-computed stationaryGroundwaterFoam computations.
  - timestep is now controlled by porous- Courant number

### Libraries

- porousBoundaryConditions

  - event fixed flow rate is conservative (flow rate is weighted for timesteps
  during which event flow rates change)

************************
*** V1901
*** Hydrology module release
************************

### Wiki

- A wiki has been initialised for some solvers and utilities on github

  https://github.com/phorgue/porousMultiphaseFoam/wiki

### Solvers

- groundwater2DFoam

  - water bilan added (with stationary option to stop run)
  - dhmax is relative to the max of hwater field
  - potentialEqn is solved instead of hwater equation (identical to stationary)

- porousScalarTransportFoam

  - mass balance added for C tracer for each non-wall patch and injection
  wellbores. Results are displayed in terminal and CSV file (see tutorials)

- porousScalarTransport2DFoam

  - passive scalar transport for pre-calulated 2D flux field with
  groundwater2DFoam

- stationaryGroundwater2DFoam

  - "stationary" version of groundwater2DFoam
  - fixedPotentialList added in transportProperties (optional)
  - forcing potential mode is added with two possible modes :
    - fixedValue : use values given in fixedPotentialList
    - fixedMNT : use bilinear interpolated value using fileMNT given 

- stationaryGroundwaterFoam

  - "stationary" version of groundwaterFoam (Richards's equation)

### Tutorials

- groundwater2DFoam

  - updated to be similar to the stationary case

- stationaryGroundwater2DFoam

  - new tutorial relative to the new solver (use forcingPotential option)

- stationaryGroundwaterFoam
