@@ -14,8 +14,6 @@
 
     CEqn.solve();
 
-    dCdTmax = max(mag(fvc::ddt(C))).value();
-
-    Info << "Concentration Min(C) = " << min(C).value() << " Max(C) = " << max(C).value() << " dCdTmax = " << dCdTmax*runTime.deltaTValue() << " mass(C) = " << fvc::domainIntegrate(C*hwater*eps).value() << endl;
+    Info << "Concentration Min(C) = " << min(C).value() << " Max(C) = " << max(C).value()  << " mass(C) = " << fvc::domainIntegrate(C*hwater*eps).value() << endl;
 
 }
